# qwe

./: Cargo.toml  errata.sulu
query/cpp/: highlights.tsq  highlights.tsq.bespoke  zebra.tsq
query/css/: highlights.tsq
query/js/: highlights.tsq  zebra.tsq
query/mona/: highlights.tsq  zebra.tsq
query/nu/: highlights.tsq  zebra.tsq
query/query/: highlights.tsq
query/rust/: highlights.scm  highlights.tsq  zebra.tsq
query/sulu/: highlights.tsq
query/toml/: highlights.tsq
query/yaml/: highlights.tsq
src/: aprintln.rs  color.rs  constants.rs  custom_literal.rs  document.rs  draw.rs  editor.rs  grapheme.rs  incremental_select.rs  ix.rs  lang.rs  language_server.rs  log.rs  lsp.rs  main.rs  navigator.rs  pos.rs  pred.rs  presenter.rs  range_sequence.rs  range_tree.rs  rope.rs  setup.rs  style.rs  terminal_size.rs  theme.rs  timeline.rs  ts.rs  util.rs
src/document/: actions.rs  diagnostics.rs  edit.rs  find.rs  history.rs  lsp_change.rs  semtoks.rs  unopened.rs
src/document/actions/: insert.rs  line_select.rs  select.rs
src/document/edit/: backspace.rs
src/draw/: cursor.rs  document.rs  jump_labels.rs  screen.rs
src/draw/document/: badges.rs  highlight.rs  main.rs  query.rs
src/editor/: actions.rs  background_docs.rs  clipboard.rs  code_actions.rs  completer.rs  cursors.rs  documents.rs  finder.rs  gadget.rs  inspect.rs  jump_labels.rs  keymap.rs  log.rs  markdown_view.rs  picker.rs  poll.rs  poll_channels.rs  renamer.rs
src/editor/actions/: insert.rs  lsp.rs  (+2 more)
src/incremental_select/: fragment.rs
src/ix/: ops.rs
src/lsp/: channel.rs
src/navigator/: directory.rs  pane.rs
src/pos/: convert.rs
src/rope/: display.rs  from.rs  iter.rs  rope.rs  slice.rs  test.rs
src/style/: darken.rs
(+7 files in other folders)
