[package]
name = "qwe"
version = "0.1.0"
edition = "2024"

[dependencies]
auto_enums = "0.8.7"
clap = { version = "4.5.54", features = ["derive"] }
crop = { version = "0.4.3", features = ["graphemes", "utf16-metric"] }
crossterm = "0.29.0"
culit = "0.6.2"
extension-trait = "1.0.2"
mutx.git = "https://github.com/Quelfth/mutx"
sulu.git = "https://github.com/Quelfth/sulu"
thiserror = "2.0.17"
tree-sitter = "0.26.3"
tree-sitter-tsquery = "0.8.0"
tree-sitter-rust = { git = "https://github.com/Quelfth/tree-sitter-rust", branch = "main" }
tree-sitter-sulu.path = "../tree-sitter-sulu"
unicode-segmentation = "1.12.0"
regex = "1.12.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-css-orchard = "0.1.2"
lsp-types = "0.95.0"
serde_json = "1.0.149"
serde = "1.0.228"
async-lsp = "0.2.2"
tokio = { version = "1.49.0", features = ["rt"] }
tower = "0.5.3"
tracing-subscriber = "0.3.22"
async-process = "2.5.0"
tracing = "0.1.44"
anyhow = "1.0.100"
convert_case = "0.11.0"
dispa.git = "https://github.com/Quelfth/dispa"
tree-sitter-javascript = "0.25.0"
tree-sitter-cpp.path = "../tree-sitter-cpp"
adot-tree-sitter-toml = "0.1.0"
include_optional = { version = "1.1.1", features = ["nightly"] }
concat_into.path = "../concat_into"

[profile.release]
debug = true
